--- a/style.css
+++ b/style.css
@@ -17,8 +17,36 @@
     height: 75px;
 }
 .blur {
-    width: 100%;
-    position: relative;
+    position: absolute;
+    bottom: -18px;
+    left: 0px;
+    width: 1440px;
     height: 75px;
 }
+.loader-bar-icon {
+    position: absolute;
+    top: 393px;
+    left: 703px;
+    width: 34px;
+    height: 34px;
+}
+.just-a-moment {
+    position: absolute;
+    top: 439px;
+    left: calc(50% - 128px);
+    display: inline-block;
+    width: 256px;
+}
+.frame {
+    width: 100%;
+    position: relative;
+    background-color: #090909;
+    height: 1024px;
+    overflow: hidden;
+    text-align: center;
+    font-size: 14px;
+    color: #fff;
+    font-family: Poppins;
+}
+
 
